# rag_v4

./: .env.example  .gitignore  README.md  distribution.md  downloader.py  flashcards.yaml  ingest_all_combinations.py  parse_logs.py  plot_logs.py  pyproject.toml  queries.yaml  query.md  rag.toml  run_all.py  tune_all_collections.py  tune_comparison.md  tuning_faq.md
corpus/: data_sources.csv  downloader.py  metadata.csv
corpus/raw_data/: general_bpi_statement_on_stress_tests.html  general_covas_testimony_stress_tests_need_more_transparency.html  general_dfa_stress_tests_2026_landing_page.html  general_federal_register_enhanced_transparency_and_public_accountability.html  general_misunderstanding_the_feds_stress_test_cost_consequences.html  general_open_board_meeting_oct_24_2025.html  general_statement_from_chair_powell_oct_24_2025.html  general_statement_from_governor_barr_oct_24_2025.html  general_statement_from_governor_miran_oct_24_2025.html  general_statement_from_governor_waller_oct_24_2025.html  general_statement_from_vice_chair_bowman_oct_24_2025.html  general_stress_testing_101_landing_page.html  general_stress_testing_response_to_tarullo_working_paper.html  general_transparency_press_release_oct_24_2025.html  general_transparency_qas.html  proposed_stress_test_model_documentation_2025_detailed_hypothetical_nine_quarter_paths.csv  proposed_stress_test_model_documentation_2025_detailed_nine_quarter_paths.csv  scenario_data_and_model_documentation_2026_severely_adverse_market_shock_all_shocks_final.xlsx  scenario_data_and_model_documentation_2026_severely_adverse_market_shock_simplified_final.xlsx  scenario_data_and_model_documentation_map_between_simplified_shocks_and_all_shocks_files.xlsx  scenarios_2026_proposed_supervisory_stress_test_scenarios.html  scenarios_federal_register_request_for_comment_on_2026_scenarios.html
docs/: embedder_providers.md  intuituin.md  model_landscape.md  pipeline_architecture.md
langchain_impl/: pyproject.toml  rag.toml
langchain_impl/rag/: __init__.py  __main__.py  config.py  corpus.py  ingest.py  loaders.py  pipeline.py  query.py  web.py
langchain_impl/rag/eval/: dataset.py  harness.py  metrics.py
langchain_impl/rag/static/: index.html
rag/: __init__.py  __main__.py  benchmark.py  config.py  corpus.py  evaluate.py  ingest.py  performance_test.py  query.py  ragas_scoring.py  tune.py  ui.py  web.py
rag/core/: pipeline.py  protocols.py  types.py
rag/embedders/: __init__.py  huggingface.py  ollama.py
rag/eval/: dataset.py  harness.py  metrics.py  types.py
rag/llms/: __init__.py  anthropic.py  ollama.py  openai.py
rag/loaders/: __init__.py  pdf.py  text.py
rag/splitters/: __init__.py  recursive.py
rag/static/: index.html
rag/stores/: __init__.py  chroma.py
results/: tuning_results.csv  tuning_results.md
tests/: test_config.py  test_pipeline.py  test_splitter.py
