[project]
name = "rag"
version = "0.1.0"
description = "Lightweight, protocol-based RAG pipeline. No LangChain in core."
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.6",
    "httpx>=0.27",
    "pypdf>=4.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
hf = ["sentence-transformers>=3.0"]
eval = [
    "ragas>=0.2",
    "langchain-core>=0.3",   # ragas judge adapter
]
dev = ["pytest>=8", "ruff>=0.4"]

[project.scripts]
rag = "rag.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
