[project]
name = "rag-langchain"
version = "0.1.0"
description = "RAG pipeline — fully LangChain/LCEL."
requires-python = ">=3.11"
dependencies = [
    "langchain-core>=0.3",
    "langchain-community>=0.3",
    "langchain-text-splitters>=0.3",
    "langchain-chroma>=0.2",
    "pypdf>=4.0",               # used by langchain PyPDFLoader
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
hf = ["langchain-huggingface>=0.1", "sentence-transformers>=3.0"]
ollama = ["langchain-ollama>=0.2"]
openai = ["langchain-openai>=0.2"]
anthropic = ["langchain-anthropic>=0.2"]
web = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "requests>=2.31",
]
eval = [
    "ragas>=0.2",
    # No extra langchain dep needed — pipeline.llm is already a ChatModel
]
dev = ["pytest>=8", "ruff>=0.4"]

[project.scripts]
rag = "rag.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["rag"]
